--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -481,8 +481,6 @@
 
 	<p>Isto é uma <a href="https://www.w3.org/2018/Process-20180201/#RecsW3C">Recomendação</a> das WCAG 2.1 elaborada pelo <a href="https://www.w3.org/WAI/GL/" xml:lang="en" lang="en">Accessibility Guidelines Working Group</a>.</p>
 
-	<p>Este documento foi revisto pelos Membros do <abbr title="World Wide Web Consortium" xml:lang="en" lang="en">W3C</abbr>, por desenvolvedores de software, e por outros grupos do <abbr xml:lang="en" lang="en" title="World Wide Web Consortium">W3C</abbr> e outras partes interessadas, e é endossado pelo Diretor como uma Recomendação do <abbr xml:lang="en" lang="en" title="World Wide Web Consortium">W3C</abbr>. É um documento estável e pode ser usado como material de referência ou citado a partir de outro documento. O papel do <abbr title="World Wide Web Consortium">W3C</abbr> ao elaborar uma Recomendação passa por chamar a atenção para a especificação e promover a sua implementação generalizada. Isto melhora a funcionalidade e a interoperabilidade da Web.</p>
-
 	<p>Ao publicar esta Recomendação, o <abbr title="World Wide Web Consortium" xml:lang="en" lang="en">W3C</abbr> espera que a funcionalidade especificada nesta Recomendação não venha a ser afetada por alterações efetuadas no <em xml:lang="en" lang="en">CSS Values</em> e no <em xml:lang="en" lang="en">Units Module Level 3</em> ou no <em xml:lang="en" lang="en">Pointer Events Level 2</em>. O <em xml:lang="en" lang="en">Working Group</em> continuará a seguir estas especificações.</p>
 
 	<p>Para comentar, <a href="https://github.com/w3c/wcag/issues/new">submeta uma questão no repositório WCAG do GitHub do <abbr xml:lang="en" lang="en" title="World Wide Web Consortium">W3C</abbr></a>. O <em xml:lang="en" lang="en">Working Group</em> solicita que os comentários públicos sejam preenchidos como novas questões, um assunto em cada comentário distinto. A criação de contas GitHub para submissão de questões é gratuita. Se a submissão de questões via GitHub não for praticável, envie email para <a href="mailto:public-agwg-comments@w3.org?subject=WCAG%202.1%20public%20comment">public-agwg-comments@w3.org</a> (<a href="https://lists.w3.org/Archives/Public/public-agwg-comments/">arquivo de comentários</a>). Os comentários recebidos sobre a Recomendação WCAG 2.1 não podem resultar em alterações na presente versão das diretrizes, mas podem ser endereçadas na errata ou em futuras versões das WCAG. O <em xml:lang="en" lang="en">Working Group</em> não planeia efetuar respostas formais aos comentários. Existe publicamente disponível uma lista de <a href="https://github.com/w3c/wcag/issues/">questões submetidas</a> bem como <a href="http://lists.w3.org/Archives/Public/w3c-wai-gl/">Arquivos da lista de discussão <abbr title="Accessibility Guidelines Working Group" xml:lang="en" lang="en">AG WG</abbr></a>, e o trabalho futuro levado a efeito pelo <em xml:lang="en" lang="en">Working Group</em> poderá vir a endereçar os comentários recebidos neste documento.</p>
@@ -738,20 +736,20 @@
 						<p><strong>Diretrizes</strong> - Abaixo dos princípios estão as diretrizes. As 13 diretrizes estabelecem os objetivos básicos a trabalhar pelos autores com vista à criação de conteúdo mais acessível a utilizadores com as mais diversas incapacidades. As diretrizes não são alvo de teste, mas disponibilizam o quadro de referência e os objetivos globais que ajudam os autores a compreenderem os critérios de sucesso e a melhor implementarem as técnicas.</p>
 					</li>
 					<li>
-						<p><strong>Critérios de Sucesso</strong> - Para cada diretriz estão disponíveis critérios de sucesso testáveis permitindo utilizar as WCAG 2.0 sempre que são necessários requisitos e testes de conformidade, tais como na especificação do <em xml:lang="en" lang="en">design</em>, nos processos de aquisição, na regulação e em acordos contratuais. Para acomodar as necessidades dos diferentes grupos e das diferentes situações, foram definidos três níveis de conformidade: A (o mais baixo), AA, e AAA (o mais alto). Informação adicional sobre os níveis de conformidade das WCAG pode ser encontrada em <a href="https://www.w3.org/WAI/WCAG21/Understanding/conformance#levels">Compreendendo os Níveis de Conformidade</a>.</p>
+						<p><strong>Critérios de Sucesso</strong> - Para cada diretriz estão disponíveis critérios de sucesso testáveis permitindo utilizar as WCAG 2.1 sempre que são necessários requisitos e testes de conformidade, tais como na especificação do <em xml:lang="en" lang="en">design</em>, nos processos de aquisição, na regulação e em acordos contratuais. Para acomodar as necessidades dos diferentes grupos e das diferentes situações, foram definidos três níveis de conformidade: A (o mais baixo), AA, e AAA (o mais alto). Informação adicional sobre os níveis de conformidade das WCAG pode ser encontrada em <a href="https://www.w3.org/WAI/WCAG21/Understanding/conformance#levels">Compreendendo os Níveis de Conformidade</a>.</p>
 					</li>
 					<li>
-						<p><strong>Técnicas de tipo Suficiente e de tipo Aconselhada</strong> - Para cada uma das <em>diretrizes</em> e <em>critérios de sucesso</em> existentes no próprio documento das WCAG 2.0, o <em xml:lang="en" lang="en">Working Group</em> documentou também uma vasta variedade de <em>técnicas</em>. As técnicas são informativas e caem em duas categorias: aquelas que são <em>suficientes</em> para satisfazer os critérios de sucesso e aquelas que são <em>aconselhadas</em>. As técnicas de tipo aconselhada vão para além do que é requerido em cada um dos critérios de sucesso, permitindo aos autores endereçarem as diretrizes de uma forma ainda melhor. Algumas técnicas de tipo aconselhada endereçam barreiras de acessibilidade que não são abrangidas pelos critérios de sucesso testáveis. Sempre que as falhas comuns são conhecidas, elas encontram-se igualmente documentadas. Consulte também <a href="https://www.w3.org/WAI/WCAG21/Understanding/understanding-techniques">Técnicas de tipo Suficiente e de tipo Aconselhada em Compreendendo as WCAG 2.0</a>.</p>
+						<p><strong>Técnicas de tipo Suficiente e de tipo Aconselhada</strong> - Para cada uma das <em>diretrizes</em> e <em>critérios de sucesso</em> existentes no próprio documento das WCAG 2.1, o <em xml:lang="en" lang="en">Working Group</em> documentou também uma vasta variedade de <em>técnicas</em>. As técnicas são informativas e caem em duas categorias: aquelas que são <em>suficientes</em> para satisfazer os critérios de sucesso e aquelas que são <em>aconselhadas</em>. As técnicas de tipo aconselhada vão para além do que é requerido em cada um dos critérios de sucesso, permitindo aos autores endereçarem as diretrizes de uma forma ainda melhor. Algumas técnicas de tipo aconselhada endereçam barreiras de acessibilidade que não são abrangidas pelos critérios de sucesso testáveis. Sempre que as falhas comuns são conhecidas, elas encontram-se igualmente documentadas. Consulte também <a href="https://www.w3.org/WAI/WCAG21/Understanding/understanding-techniques">Técnicas de tipo Suficiente e de tipo Aconselhada em Compreendendo as WCAG 2.1</a>.</p>
 					</li>
 				</ul>
 				<p>Todos estes níveis de abordagem (princípios, diretrizes, critérios de sucesso e técnicas de tipo suficiente e de tipo aconselhada) concorrem para disponibilizar orientações sobre como tornar o conteúdo mais acessível. Incentivam-se os autores a observar e a aplicar os níveis mais elevados que consigam, incluindo as técnicas de tipo aconselhada, de forma a endereçar da melhor forma possível as necessidades do maior número possível de utilizadores.</p>
 				
-				<p>Note que mesmo o conteúdo que está em conformidade com o nível mais elevado (AAA) não será acessível a pessoas com todos os tipos, graus, ou combinações de incapacidades, particularmente nas áreas cognitiva, da linguagem e da aprendizagem. Incentivam-se os autores a considerar o leque completo de técnicas, incluindo as técnicas de tipo aconselhada, assim como a procurar aconselhamento relevante em matéria de boas práticas em curso que assegurem que o conteúdo Web é, o mais possível, acessível a esta comunidade. <a href="https://www.w3.org/WAI/WCAG21/Understanding/understanding-metadata">Metadata</a> pode apoiar os utilizadores na busca dos conteúdos que melhor servem as suas necessidades.</p>
+				<p>Note que mesmo o conteúdo que está em conformidade com o nível mais elevado (AAA) não será acessível a pessoas com todos os tipos, graus, ou combinações de incapacidades, particularmente nas áreas cognitiva, da linguagem e da aprendizagem. Incentivam-se os autores a considerarem o leque completo de técnicas, incluindo as técnicas de tipo aconselhada, assim como a procurarem aconselhamento relevante em matéria de boas práticas em curso que assegurem que o conteúdo Web é, o mais possível, acessível a esta comunidade. Os <a href="https://www.w3.org/WAI/WCAG21/Understanding/understanding-metadata">Metadados</a> podem apoiar os utilizadores na busca dos conteúdos que melhor servem as suas necessidades.</p>
 			</section>
 			<section id="wcag-2-1-supporting-documents">
 				<h3 id="x0-3-wcag-2-1-supporting-documents"><span class="secno">0.3 </span>Documentos de Apoio das WCAG 2.1 <span class="permalink"><a href="#wcag-2-1-supporting-documents" aria-label="Permalink para o 0.3 Documentos de Apoio das WCAG 2.1" title="Permalink para o 0.3 Documentos de Apoio das WCAG 2.1"><span>§</span></a></span></h3>
 
-				<p>O documento das WCAG 2.0 está concebido para satisfazer as necessidades daqueles que precisam de uma norma técnica estável e referenciável. Há outros documentos, chamados de documentos de apoio, baseados no documento das WCAG 2.0 mas que endereçam outros propósitos importantes, nomeadamente a possibilidade de atualização para descrever de que forma as WCAG podem ser aplicadas a tecnologias novas. Os documentos de apoio incluem:</p>
+				<p>O documento das WCAG 2.1 está concebido para satisfazer as necessidades daqueles que precisam de uma norma técnica estável e referenciável. Há outros documentos, chamados de documentos de apoio, baseados no documento das WCAG 2.1 mas que endereçam outros propósitos importantes, nomeadamente a possibilidade de atualização para descrever de que forma as WCAG podem ser aplicadas a tecnologias novas. Os documentos de apoio incluem:</p>
 				<ol class="enumar">
 					<li>
 						<p><strong><a href="https://www.w3.org/WAI/WCAG21/quickref/">Como Satisfazer as WCAG 2.1</a></strong> - Um referencial rápido personalizável para as WCAG 2.1 que inclui todas as diretrizes, critérios de sucesso e técnicas para os autores utilizarem no desenvolvimento e na avaliação do conteúdo Web. Isto inclui conteúdo das WCAG 2.0 e das WCAG 2.1 e pode ser filtrada das mais diversas maneiras para ajudar os autores a focarem-se no conteúdo relevante.</p>
@@ -766,7 +764,7 @@
 						<p><strong><a href="https://www.w3.org/WAI/standards-guidelines/wcag/docs/">Os Documentos WCAG</a></strong> - Um diagrama e uma descrição de como estão os documentos técnicos relacionados e ligados.</p>
 					</li>
 				</ol>
-				<p>Consulte a <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Antevisão das Diretrizes de Acessibilidade para Conteúdo Web (WCAG)</a> para uma descrição do material de apoio das WCAG 2.0, incluindo recursos educativos relacionados com as WCAG 2. Recursos adicionais que cobrem tópicos tais como o modelo de negócio para a acessibilidade Web, planear a implementação para melhorar a acessibilidade dos sítios Web, e políticas de acessibilidade estão listadas em <a href="http://www.w3.org/WAI/Resources/Overview">Recursos WAI</a>.</p>
+				<p>Consulte a <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Antevisão das Diretrizes de Acessibilidade para Conteúdo Web (WCAG)</a> para uma descrição do material de apoio das WCAG 2.1, incluindo recursos educativos relacionados com as WCAG 2. Recursos adicionais que cobrem tópicos tais como o modelo de negócio para a acessibilidade Web, planear a implementação para melhorar a acessibilidade dos sítios Web, e políticas de acessibilidade estão listadas em <a href="http://www.w3.org/WAI/Resources/Overview">Recursos WAI</a>.</p>
 			</section>
 
         	<section id="requirements-for-wcag-2-1">
@@ -795,16 +793,16 @@
 						<li>1.4.10 <a href="#reflow">Realinhar</a> (AA)</li>
 						<li>1.4.11 <a href="#non-text-contrast">Contraste não textual</a> (AA)</li>
 						<li>1.4.12 <a href="#text-spacing">Espaçamento de Texto</a> (AA)</li>
-						<li>1.4.13 <a href="#content-on-hover-or-focus">Conteúdo do <em xml:lang="en" lang="en">on Hover</em> ou Foco</a> (AA)</li>
+						<li>1.4.13 <a href="#content-on-hover-or-focus">Conteúdo <em xml:lang="en" lang="en">on Hover</em> ou Foco</a> (AA)</li>
 						<li>2.1.4 <a href="#character-key-shortcuts">Teclas de atalho Caráter</a> (A)</li>
 						<li>2.2.6 <a href="#timeouts">Tempos limite</a> (AAA)</li>
 						<li>2.3.3 <a href="#animation-from-interactions">Animação das Interações</a> (AAA)</li>
-						<li>2.5.1 <a href="#pointer-gestures">Pointer Gestures</a> (A)</li>
-						<li>2.5.2 <a href="#pointer-cancellation">Pointer Cancellation</a> (A)</li>
-						<li>2.5.3 <a href="#label-in-name">Label in Name</a> (A)</li>
-						<li>2.5.4 <a href="#motion-actuation">Motion Actuation</a> (A)</li>
-						<li>2.5.5 <a href="#target-size">Target Size</a> (AAA)</li>
-						<li>2.5.6 <a href="#concurrent-input-mechanisms">Concurrent Input Mechanisms</a> (AAA)</li>
+						<li>2.5.1 <a href="#pointer-gestures">Gestos de Apontador</a> (A)</li>
+						<li>2.5.2 <a href="#pointer-cancellation">Cancelamento de Apontador</a> (A)</li>
+						<li>2.5.3 <a href="#label-in-name">Etiqueta no Nome</a> (A)</li>
+						<li>2.5.4 <a href="#motion-actuation">Atuação do Movimento</a> (A)</li>
+						<li>2.5.5 <a href="#target-size">Tamanho do Alvo</a> (AAA)</li>
+						<li>2.5.6 <a href="#concurrent-input-mechanisms">Mecanismos de Entrada Simultânea</a> (AAA)</li>
 						<li>4.1.3 <a href="#status-messages">Mensagens de <em>Status</em></a> (AA)</li>
 					</ul>
 
@@ -2105,8 +2103,8 @@
 						<li>
 							<p>O(s) agente(s) de utilizador que suportam a tecnologia têm suporte à acessibilidade e encontram-se disponíveis para serem descarregáveis ou adquiridos de um modo que:</p>			
 							<ul>
-								<li>não custe a uma pessoa com uma deficiência mais do que a uma pessoa sem uma deficiência <strong>e</strong></li>
-								<li>seja tão fácil encontrar e obter para uma pessoa com uma deficiência quanto o é para uma pessoa sem deficiências.</li>
+								<li>não custe a uma pessoa com uma incapacidade mais do que a uma pessoa sem uma incapacidade <strong>e</strong></li>
+								<li>seja tão fácil encontrar e obter para uma pessoa com uma incapacidade quanto o é para uma pessoa sem incapacidades.</li>
 							</ul>
 						</li>
 					</ol>
