--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1255,7 +1255,7 @@
 
   	<div class="note" id="issue-container-generatedID-8"><div role="heading" class="note-title marker" id="h-note-8" aria-level="5"><span>Nota</div><p class="">São exemplos de conteúdo adicional controlado pelo agente de utilizador os <em xml:lang="en" lang="en">tooltips</em> de navegadores Web criados através da utilização do <a href="https://www.w3.org/TR/html/dom.html#the-title-attribute">atributo <code>title</code></a> do HTML.</p></div>
 
-  		<div class="note" id="issue-container-generatedID-9"><div role="heading" class="note-title marker" id="h-note-9" aria-level="5"><span>Nota</di2v><p class="">Os <em xml:lang="en" lang="en">tooltips</em> personalizados, os sub-menus, e outros <em xml:lang="en" lang="en">popups</em> invulgares, que mostram conteúdo sempre que o apontador fica sobre ou são alcançados pelo foco do teclado, são exemplos de conteúdo adicional abrangido por este critério.</p></div>
+  		<div class="note" id="issue-container-generatedID-9"><div role="heading" class="note-title marker" id="h-note-9" aria-level="5">Nota</div><p class="">Os <em xml:lang="en" lang="en">tooltips</em> personalizados, os sub-menus, e outros <em xml:lang="en" lang="en">popups</em> invulgares, que mostram conteúdo sempre que o apontador fica sobre ou são alcançados pelo foco do teclado, são exemplos de conteúdo adicional abrangido por este critério.</p></div>
   	</section>
 </section>
 </section>
