--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1006,7 +1006,7 @@
 
   	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/orientation.html">Compreendendo Orientação</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#orientation">Como Satisfazer Orientação</a></div><p class="conformance-level">(Nível AA)</p>
 
-  	<p>O conteúdo não restringe a sua visualização e operação a uma única orientação, visualização retrato ou paisagem, a não ser que uma orientação de visualização específica seja <a href="#dfn-essential" class="internalDFN" data-link-type="dfn">essencial.</p>
+  	<p>O conteúdo não restringe a sua visualização e operação a uma única orientação, visualização retrato ou paisagem, a não ser que uma orientação de visualização específica seja <a href="#dfn-essential" class="internalDFN" data-link-type="dfn">essencial</a>.</p>
 
   	<div class="note" id="issue-container-generatedID-0"><div role="heading" class="note-title marker" id="h-note-0" aria-level="5"><span>Nota</span></div><p class="">São exemplos onde uma orientação de visualização particular possa ser essencial: um cheque bancário, uma aplicação de piano, diapositivos para um projetor ou televisão, ou um conteúdo de realidade virtual em que a orientação de visualização binária não seja aplicável.</p></div>
   </section>
