--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1411,7 +1411,7 @@
 
 	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/timeouts.html">Compreendendo Tempos Limite</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#timeouts">Como satisfazer Tempos Limite</a></div><p class="conformance-level">(Nível AAA)</p>
 
-	<p>Os utilizadores são avisados da duração de qualquer <a href="#dfn-user-inactivity" class="internalDFN" data-link-type="dfn">inatividade de utilizador</a> que possa causar perda de dados, a não ser que os dados sejam preservados por mais do que 20 horas sem que o utilizador tenha tomado quaisquer ações.</p>
+	<p>Os utilizadores são avisados da duração de qualquer <a href="#dfn-user-inactivity" class="internalDFN" data-link-type="dfn">inatividade do utilizador</a> que possa causar perda de dados, a não ser que os dados sejam preservados por mais do que 20 horas sem que o utilizador tenha tomado quaisquer ações.</p>
 
 	<div class="note" id="issue-container-generatedID-18"><div role="heading" class="note-title marker" id="h-note-18" aria-level="5"><span>Nota</div><p class="">Os regulamentos privados podem obrigar ao explícito consentimento do utilizador antes da identificação de utilizador ter sido autenticada e antes dos dados de utilizador serem guardados. Nos casos em que o utilizador é menor, o consentimento explícito poderá não ser necessário na maioria das jurisdições, países ou regiões. É aconselhável consultar profisionais privados e juristas sempre que considerar a preservação de dados uma forma de abordar a satisfação deste Critério de Sucesso.</p></div>
 </section>
@@ -1508,7 +1508,7 @@
 
 	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/multiple-ways.html">Compreendendo Múltiplas Formas</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#multiple-ways">Como satisfazer Múltiplos Modos</a></div><p class="conformance-level">(Nível AA)</p>
    
-   <p>Está disponível mais de uma forma para localizar uma <a href="#dfn-web-page-s" class="internalDFN" data-link-type="dfn">página Web</a> num <a href="#dfn-set-of-web-pages" class="internalDFN" data-link-type="dfn">conjunto de páginas  Web</a>, exceto onde a Página Web é o resultado, ou um passo, de um <a href="#dfn-processes" class="internalDFN" data-link-type="dfn">processo</a>.</p>
+   <p>Está disponível mais de uma forma para localizar uma <a href="#dfn-web-page-s" class="internalDFN" data-link-type="dfn">página Web</a> num <a href="#dfn-set-of-web-pages" class="internalDFN" data-link-type="dfn">conjunto de páginas Web</a>, exceto onde a Página Web é o resultado, ou um passo, de um <a href="#dfn-processes" class="internalDFN" data-link-type="dfn">processo</a>.</p>
    
 </section>
 
@@ -1579,7 +1579,7 @@
 
 		<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/pointer-gestures.html">Compreendendo Gestos de Apontador</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#pointer-gestures">Como Satisfazer Gestos de Apontador</a></div><p class="conformance-level">(Nível A)</p>
 
-		<p>Toda a <a href="#dfn-functionality" class="internalDFN" data-link-type="dfn">funcionalidade</a> que, para produzir resultados, utilize multiponto ou obrigue a efetuar um determinado conjunto de gestos sequenciais pode ser operado com um <a href="#dfn-single-pointer" class="internalDFN" data-link-type="dfn">único apontador</a> sem necessidade de recorrer a um conjunto de gestos sequenciais, a não ser que o multiponto ou o conjunto de gestos sequenciais tenham caráter <a href="#dfn-essential" class="internalDFN" data-link-type="dfn">essencial</a>.</p>
+		<p>Toda a <a href="#dfn-functionality" class="internalDFN" data-link-type="dfn">funcionalidade</a> que, para produzir resultados, utilize multiponto ou obrigue a efetuar um determinado conjunto de gestos sequenciais pode ser operado com <a href="#dfn-single-pointer" class="internalDFN" data-link-type="dfn">um só apontador</a> sem necessidade de recorrer a um conjunto de gestos sequenciais, a não ser que o multiponto ou o conjunto de gestos sequenciais tenham caráter <a href="#dfn-essential" class="internalDFN" data-link-type="dfn">essencial</a>.</p>
 
 		<div class="note" id="issue-container-generatedID-22"><div role="heading" class="note-title marker" id="h-note-22" aria-level="5"><span>Nota</div><p class="">Este requisito aplica-se ao conteúdo Web que interprete ações de apontador (i.e. isto não se aplica a ações que são necessárias para operar agentes de utilizador ou tecnologias de apoio).</p></div>
 	</section>
@@ -1590,7 +1590,7 @@
 
 	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/pointer-cancellation.html">Compreendendo Cancelamento do Apontador</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#pointer-cancellation">Como satisfazer Cancelamento de Apontador</a></div><p class="conformance-level">(Nível A)</p>
 
-	<p>Para <a href="#dfn-functionality" class="internalDFN" data-link-type="dfn">funcionalidades</a> que possam ser operadas utilizando um <a href="#dfn-single-pointer" class="internalDFN" data-link-type="dfn">apontador singular</a>, pelo menos um dos seguintes itens é verdadeiro:</p>
+	<p>Para <a href="#dfn-functionality" class="internalDFN" data-link-type="dfn">funcionalidades</a> que possam ser operadas utilizando <a href="#dfn-single-pointer" class="internalDFN" data-link-type="dfn">um só apontador</a>, pelo menos um dos seguintes itens é verdadeiro:</p>
 
 	<dl>
 		<dt>Não <em xml:lang="en" lang="en">Down-Event</em></dt><dd>O <a href="#dfn-down-event" class="internalDFN" data-link-type="dfn"><em xml:lang="en">down-event</em></a> do apontador não é utilizado para executar qualquer parte da função;</dd>
@@ -2397,7 +2397,7 @@
 		<dd>
 			<p>interface utilizada pelo software para obter entradas por digitação</p>
 			<div class="note" id="issue-container-generatedID-92"><div role="heading" class="note-title marker" id="h-note-92" aria-level="3"><span>Nota</span></div><p class="">Uma interface de teclado permite aos utilizadores digitar entradas no programa mesmo que a tecnologia nativa não disponha de teclado.</p></div>
-			<p class="example">Um PDA com ecrã sensível ao toque tem uma interface de teclado incorporada no seu sistema operativo, assim como uma conexão para teclados externos. As aplicações do PDA podem usar a interface para obter inserção de dados por teclado quer através de um teclado externo quer através de aplicações que simulam saídas de teclado, tais como sistemas de interpretação de caracteres manuscritos ou aplicações de reconhecimento de voz com a funcionalidade de "emulação de teclado".</p>
+			<p class="example">Um PDA com ecrã sensível ao toque tem uma interface de teclado incorporada no seu sistema operativo, assim como uma conexão para teclados externos. As aplicações do PDA podem usar a interface para obter inserção de dados por teclado quer através de um teclado externo quer através de aplicações que simulam saídas de teclado, tais como sistemas de interpretação de carateres manuscritos ou aplicações de reconhecimento de voz com a funcionalidade de "emulação de teclado".</p>
 			<div class="note" id="issue-container-generatedID-94"><div role="heading" class="note-title marker" id="h-note-94" aria-level="3"><span>Nota</span></div><p class="">A utilização de uma aplicação (ou partes da aplicação) através de emuladores de rato pelo teclado, tais como o MouseKeys (teclas do rato), não a qualifica como sendo uma operação por interface de teclado porque a operação do programa é, neste caso, feita pela sua interface de dispositivo apontador e não pela sua interface de teclado.</p></div>
 		</dd>
 
@@ -2738,9 +2738,9 @@
                 	<p>O up-event pode ter diferentes nomes em diferentes plataformas, tais como "touchend" ou "mouseup".</p>
                 </dd>
 
-                <dt><dfn data-dfn-type="dfn" id="dfn-used-in-an-unusual-or-restricted-way">usado de forma invulgar ou restrita</dfn></dt>
+                <dt><dfn data-dfn-type="dfn" id="dfn-used-in-an-unusual-or-restricted-way">utilizadas de forma invulgar ou de um modo restrito</dfn></dt>
                 <dd>
-                	<p>palavras usadas de tal forma que obrigam os utilizadores a saberem exatamente que definição usar, de forma a compreenderem o conteúdo corretamente</p>
+                	<p>palavras utilizadas de tal forma que obrigam os utilizadores a saberem exatamente que definição usar, de forma a compreenderem o conteúdo corretamente</p>
                 	<p class="example">O termo "gig" significa algo diferente se ocorre numa discusão de concertos de música ou se está num artigo sobre espaço de um disco rígido de um computador, mas a definição apropriada pode ser determinada a partir do contexto. Por contraste, a palavra "texto" é utilizada de uma forma muito específica nas WCAG 2.1, razão pela qual é fornecida uma definião no glossário.</p>
                 </dd>
 
@@ -2774,13 +2774,13 @@
 
                 <dt><dfn data-dfn-type="dfn" id="dfn-video">vídeo</dfn></dt>
                 <dd>
-                	<p>a tecnologia dos filmes ou de imagens sequenciadas ou imagens</p>
+                	<p>a tecnologia dos filmes ou de imagens sequenciais ou de imagens</p>
                 	<div class="note" id="issue-container-generatedID-138"><div role="heading" class="note-title marker" id="h-note-138" aria-level="3"><span>Nota</span></div><p class="">O vídeo pode ser composto por imagens fotográficas ou animadas, ou por ambas.</p></div>
                 </dd>
 
                 <dt><dfn data-dfn-type="dfn" id="dfn-video-only">apenas vídeo</dfn></dt>
                 <dd>
-                	<p>uma apresentação dinâmica ou contínua que contém apenas <a href="#dfn-video" class="internalDFN" data-link-type="dfn">vídeo</a> (não tem <a href="#dfn-audio" class="internalDFN" data-link-type="dfn">áudio</a> nem interação)</p>
+                	<p>uma apresentação dinâmica ou contínua que contém apenas <a href="#dfn-video" class="internalDFN" data-link-type="dfn">vídeo</a> (sem <a href="#dfn-audio" class="internalDFN" data-link-type="dfn">áudio</a> nem interação)</p>
                 </dd>
 
                 <dt><dfn data-dfn-type="dfn" id="dfn-viewport">viewport (janela de visualização)</dfn></dt>
