--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -2801,7 +2801,7 @@
 		<dd>
 			<p>objeto no qual o agente de utilizador apresenta o conteúdo</p>
 			<div class="note" id="issue-container-generatedID-139"><div role="heading" class="note-title marker" id="h-note-139" aria-level="3"><span>Nota</span></div><p class="">O <a href="#dfn-user-agents" class="internalDFN" data-link-type="dfn">agente de utilizador</a> apresenta o conteúdo através de uma ou mais <em xml:lang="en" lang="en">viewports</em> (janelas de apresentação). As <em xml:lang="en" lang="en">Viewports</em> incluem janelas, molduras, altifalantes e óculos de ampliação virtual. Uma <em xml:lang="en" lang="en">viewport</em> pode conter outra <em xml:lang="en" lang="en">viewport</em> (e.g., molduras encadeadas). As componentes da interface criadas pelos agentes de utilizador tais como <em xml:lang="en" lang="en">prompts</em>, menus, e alertas não são <em xml:lang="en" lang="en">viewports</em>.</p></div>
-			<div class="note" id="issue-container-generatedID-140"><div role="heading" class="note-title marker" id="h-note-140" aria-level="3"><span>Nota</span></div><p class="">Esta definição baseia-se nas <a href="https://www.w3.org/TR/WAI-USERAGENT/glossary.html">no Glossário das Diretrizes de Acessibilidade dos Agentes de Utilizador 1.0</a> [<cite><a class="bibref" href="#bib-UAAG10">UAAG10</a></cite>].</p></div>
+			<div class="note" id="issue-container-generatedID-140"><div role="heading" class="note-title marker" id="h-note-140" aria-level="3"><span>Nota</span></div><p class="">Esta definição baseia-se no <a href="https://www.w3.org/TR/WAI-USERAGENT/glossary.html">Glossário das Diretrizes de Acessibilidade dos Agentes de Utilizador 1.0</a> [<cite><a class="bibref" href="#bib-UAAG10">UAAG10</a></cite>].</p></div>
 		</dd>		
 	</dl>
 </section>      
