--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -2762,7 +2762,7 @@
 		<dt><dfn data-dfn-type="dfn" id="dfn-used-in-an-unusual-or-restricted-way">utilizadas de forma invulgar ou de um modo restrito</dfn></dt>
 		<dd>
 			<p>palavras utilizadas de tal forma que obrigam os utilizadores a saberem exatamente que definição usar, de forma a compreenderem o conteúdo corretamente</p>
-			<p class="example">O termo "gig" significa algo diferente se ocorre numa discusão de concertos de música ou se está num artigo sobre espaço de um disco rígido de um computador, mas a definição apropriada pode ser determinada a partir do contexto. Por contraste, a palavra "texto" é utilizada de uma forma muito específica nas WCAG 2.1, razão pela qual é fornecida uma definião no glossário.</p>
+			<p class="example">O termo "gig" significa algo diferente se ocorre numa discusão de concertos de música ou se está num artigo sobre espaço de um disco rígido de um computador, mas a definição apropriada pode ser determinada a partir do contexto. Por contraste, a palavra "texto" é utilizada de uma forma muito específica nas WCAG 2.1, razão pela qual é fornecida uma definição no glossário.</p>
 		</dd>
 
 		<dt><dfn data-dfn-type="dfn" id="dfn-conforming-alternate-version">versão alternativa em conformidade</dfn></dt>
