--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -2063,7 +2063,7 @@
 
 		<dt><dfn data-dfn-type="dfn" id="dfn-same-relative-order">a mesma ordem relativa</dfn></dt>
 		<dd>
-			<p>same position relative to other items</p>
+			<p>a mesma posição relativa em relação aos outros itens</p>
 			<div class="note" id="issue-container-generatedID-125">
 				<div role="heading" class="note-title marker" id="h-note-125" aria-level="3"><span>Nota</span>
 				</div>
