--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -2046,7 +2046,7 @@
             <section id="conformance-partial-lang">
                 <h3 id="x5-5-statement-of-partial-conformance-language"><span class="secno">5.5 </span>Declaração de Conformidade Parcial - Idioma <span class="permalink"><a href="#conformance-partial-lang" aria-label="Permalink para o 5.5 Declaração de Conformidade Parcial - Idioma" title="Permalink para o 5.5 Declaração de Conformidade Parcial - Idioma"><span>§</span></a></span></h3>
 
-                <p>Uma "declaração de conformidade parcial devido ao idioma" pode ser feita quando a página não está conforme, mas estaria conforme se o <a href="#dfn-accessibility-supported" class="internalDFN" data-link-type="dfn">suporte à acessibilidade</a> existisse para (todos os) o idioma(s) utilizado(s) na página. A forma dessa declaração poderia ser, "Esta página não está conforme, mas estaria conforme com o nível X das WCAG 2.1 se existisse "suporte à acessibilidade" para o(s) seguinte(s) idioma(s):"</p>
+                <p>Uma "declaração de conformidade parcial devido ao idioma" pode ser feita quando a página não está conforme, mas estaria conforme se o <a href="#dfn-accessibility-supported" class="internalDFN" data-link-type="dfn">suporte à acessibilidade</a> existisse para o(todos os) idioma(s) utilizado(s) na página. A forma dessa declaração poderia ser, "Esta página não está conforme, mas estaria conforme com o nível X das WCAG 2.1 se existisse "suporte à acessibilidade" para o(s) seguinte(s) idioma(s):"</p>
             </section>
 
         </section>
