--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -456,7 +456,7 @@
 <p>Consulte também a página das <a href="https://www.w3.org/WAI/standards-guidelines/wcag/translations/">
       <strong>traduções</strong></a>.</p>
     	
-<p>Este documento está também diponível em formatos não normativos, a partir de <a href="https://www.w3.org/WAI/WCAG21/versions/">Versões Alternativas das Diretrizes de Acessibilidade para Conteúdo Web 2.1</a>.</p>
+<p>Este documento está também disponível em formatos não normativos, a partir de <a href="https://www.w3.org/WAI/WCAG21/versions/">Versões Alternativas das Diretrizes de Acessibilidade para Conteúdo Web 2.1</a>.</p>
   
 <p xml:lang="pt-PT" lang="pt-PT" class="copyright"><a href="https://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> © 2017-2018 <a href="https://www.w3.org/"><abbr title="World Wide Web Consortium">W3C</abbr></a><sup>®</sup> (<a href="https://www.csail.mit.edu/"><abbr title="Massachusetts Institute of Technology">MIT</abbr></a>, <a href="https://www.ercim.eu/"><abbr title="European Research Consortium for Informatics and Mathematics">ERCIM</abbr></a>, <a href="https://www.keio.ac.jp/">Keio</a>, <a href="http://ev.buaa.edu.cn/">Beihang</a>). <abbr title="World Wide Web Consortium">W3C</abbr> <a href="https://www.w3.org/Consortium/Legal/ipr-notice#Legal_Disclaimer">liability</a>, <a href="https://www.w3.org/Consortium/Legal/ipr-notice#W3C_Trademarks">trademark</a> and <a rel="license" href="https://www.w3.org/Consortium/Legal/copyright-documents">document use</a> rules apply.</p>
 <hr title="Separador do cabeçalho">
