--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -2564,7 +2564,7 @@
 		<dd class="new">
 			<p>ângulo visual de cerca de 0.0213 graus</p>
 			
-			<p>Um píxel CSS é a unidade de medida canónica para todas as dimensões e medidas em CSS. Esta unidade é independente da densidade e distinta dos píxeis de <em xml:lang="en" lang="en">hardware</em> atuais presentes num ecrã. Os agentes de utilizador e os sistemas operativos devem assegurar que um píxel CSS é definido o mais próximo possível ao <a href="https://www.w3.org/TR/css3-values/#reference-pixel">CSS Values and Units Module Level 3 reference pixel</a> [<cite><a class="bibref" href="#bib-css3-values">css3-values</a></cite>], o qual toma em linha de conta as dimensões físicas do ecrã e distância de visualização assumida (factores que não podem ser determinados pelos autores do conteúdo).</p>
+			<p>Um píxel CSS é a unidade de medida canónica para todas as dimensões e medidas em CSS. Esta unidade é independente da densidade e distinta dos píxeis de <em xml:lang="en" lang="en">hardware</em> atuais presentes num ecrã. Os agentes de utilizador e os sistemas operativos devem assegurar que um píxel CSS é definido o mais próximo possível ao <a href="https://www.w3.org/TR/css3-values/#reference-pixel">CSS Values and Units Module Level 3 reference pixel</a> [<cite><a class="bibref" href="#bib-css3-values">css3-values</a></cite>], o qual toma em linha de conta as dimensões físicas do ecrã e a distância de visualização assumida (factores que não podem ser determinados pelos autores do conteúdo).</p>
 		</dd>
 
 		<dt><dfn data-dfn-type="dfn" id="dfn-prerecorded">pré-gravado</dfn></dt>
