--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1030,7 +1030,7 @@
 
 	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/identify-purpose.html">Compreendendo Identificar Propósito</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#identify-purpose">Como satisfazer Identificar Propósito</a></div><p class="conformance-level">(Nível AAA)</p>
 
-	<p>No conteúdo implementado que utiliza linguagens de marcação, o propósito das <a href="#dfn-user-interface-components" class="internalDFN" data-link-type="dfn">Componentes da Interface de Utilizador</a>, icones, e <a href="#dfn-regions" class="internalDFN" data-link-type="dfn">regiões</a> podem ser <a href="#dfn-programmatically-determinable" class="internalDFN" data-link-type="dfn">programaticamente determinado</a>.</p>
+	<p>No conteúdo implementado por linguagens de marcação, o propósito das <a href="#dfn-user-interface-components" class="internalDFN" data-link-type="dfn">Componentes da Interface de Utilizador</a>, icones, e <a href="#dfn-regions" class="internalDFN" data-link-type="dfn">regiões</a> pode ser <a href="#dfn-programmatically-determinable" class="internalDFN" data-link-type="dfn">programaticamente determinado</a>.</p>
 </section>
 </section>
 
