--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1190,8 +1190,8 @@
 	<p>O conteúdo pode ser apresentado sem perda de informação ou funcionalidade, e sem obrigar a um varrimento a duas dimensões para:</p>
 
 	<ul>
-       <li>Varrimento de conteúdo vertical numa largura equivalente a 320 <a href="#dfn-css-pixels" class="internalDFN" data-link-type="dfn">píxeis CSS</a>;</li>
-       <li>Varrimento de conteúdo horizontal numa altura equivalente a 256 <a href="#dfn-css-pixels" class="internalDFN" data-link-type="dfn">píxeis CSS</a>.</li>
+       <li>Varrimento vertical de conteúdo numa largura equivalente a 320 <a href="#dfn-css-pixels" class="internalDFN" data-link-type="dfn">píxeis CSS</a>;</li>
+       <li>Varrimento horizontal de conteúdo numa altura equivalente a 256 <a href="#dfn-css-pixels" class="internalDFN" data-link-type="dfn">píxeis CSS</a>.</li>
    </ul>
 
    <p>Exceto para partes do conteúdos que obriguem por questões de utilização ou significado um <em xml:lang="en" lang="en">layout</em> a duas dimensões.</p>
