--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1240,7 +1240,7 @@
 
 	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/content-on-hover-or-focus.html">Compreendendo Conteúdo <em xml:lang="en" lang="en">on Hover</em> ou Foco</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#content-on-hover-or-focus">Como satisfazer Conteúdo <em xml:lang="en" lang="en">on Hover</em> ou Foco</a></div><p class="conformance-level">(Nível AA)</p>
 
-	<p>Onde a receção e posterior remoção do apontador sobre, ou do foco de teclado, provoca que conteúdo adicional se torne visível e depois oculto, o seguinte tem de ser verdadeiro:</p>
+	<p>Onde a receção e posterior remoção do apontador sobre, ou do foco do teclado, provoca que conteúdo adicional se torne visível e depois oculto, o seguinte tem de ser verdadeiro:</p>
 
 	<dl>
 		<dt>Descartável</dt>
