--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1528,7 +1528,7 @@
 
 	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/focus-visible.html">Compreendendo Foco Visível</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#focus-visible">Como satisfazer Foco Visível</span></a></div><p class="conformance-level">(Nível AA)</p>
 
-	<p>Qualquer interface de utilizador operável via teclado tem um modo de operação em que o indicador de foco de teclado é visível.</p>
+	<p>Qualquer interface de utilizador operável via teclado tem um modo de operação em que o indicador de foco do teclado é visível.</p>
    
 </section>
 
